Force version 0.16.1 of werkzeug
Because we are using a deprecated import, should update it to latest version.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -50,7 +50,7 @@ requirements:
     - tvb-library 2.1
     - tvb-data
     - tvb-gdist
-    - werkzeug
+    - werkzeug 0.16.1
     - psycopg2
 
 test:
