Force pytest to use separate mock library for 3.8

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -67,7 +67,7 @@ test:
     - python -m zipfile -e tvb_data.zip tvb_data
     - cd tvb_data
     - python setup.py develop
-    - pytest --pyargs tvb.tests.framework
+    - pytest -o mock_use_standalone_module=true --pyargs tvb.tests.framework
 
 about:
   home: http://www.thevirtualbrain.com/
