add pip install bct

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -66,6 +66,7 @@ test:
   commands:
     - pip install requests-toolbelt pynrrd simpleitk wget
     - pip install allensdk --no-deps
+    - pip install bctpy
     - python -m wget -o tvb_data.zip https://zenodo.org/record/4263723/files/tvb_data.zip?download=1
     - python -m zipfile -e tvb_data.zip tvb_data
     - cd tvb_data
