--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -67,12 +67,12 @@ test:
   commands:
     - pip install requests-toolbelt pynrrd simpleitk wget
     - pip install allensdk --no-deps
-    - pip install bctpy siibra
+    - pip install bctpy siibra xarray
     - python -m wget -o tvb_data.zip https://zenodo.org/record/4263723/files/tvb_data.zip?download=1
     - python -m zipfile -e tvb_data.zip tvb_data
     - cd tvb_data
     - python setup.py develop
-    - pytest -o mock_use_standalone_module=true --pyargs tvb.tests.framework
+    - pytest -o mock_use_standalone_module=true --pyargs tvb.tests.framework --ignore-glob=**bids_monitor_test.py
 
   imports:
     - tvb.core.adapters
