--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -72,7 +72,7 @@ test:
     - python -m zipfile -e tvb_data.zip tvb_data
     - cd tvb_data
     - python setup.py develop
-    - pytest -o mock_use_standalone_module=true --pyargs tvb.tests.framework --ignore=interfaces/rest/bids_monitor_test.py
+    - pytest -o mock_use_standalone_module=true --pyargs tvb.tests.framework --ignore=$PREFIX/lib/python3.10/site-packages/tvb/tests/framework/interfaces/rest/bids_monitor_test.py
 
   imports:
     - tvb.core.adapters
